--- a/portfolio.html
+++ b/portfolio.html
@@ -23,7 +23,7 @@
                         <li> <b><a href="contacts.html">Контакты</a></b></li>
                     </ul>  
                 </nav>  
-                <button class ="button" onclick="tst()"><img src="images/moon.png" alt="Горшок Жив" width="50" class = "logo" id="buttons"></button>
+                <button class ="button" onclick="add_theme_4()"><img src="images/moon.png" alt="Горшок Жив" width="50" class = "logo" id="buttons"></button>
             </header>
 
     <article>
