--- a/competence.html
+++ b/competence.html
@@ -9,8 +9,7 @@
     <script src="js/script.js"></script> 
 
 </head>
-<body>
-    <header>
+<body class = "body_light" id = "body_id" onload = "isDarkTheme_kompetetions(); isButtonShow();">    <header>
             <a href="about_myself.html">
                 <img src="images/kish.png" alt="Горшок Жив" width="100" class = "logo" id="logo"></a>
 
