--- a/about_myself.html
+++ b/about_myself.html
@@ -10,7 +10,7 @@
     <script src="js/script.js"></script> 
     
 </head>
-<body class = "body_light" id = "body_id" onload = "isDarkTheme_main();">
+<body>
     <header>
             <a href="about_myself.html">
                 <img src="images/kish.png" alt="Горшок Жив" width="100" class = "logo" id="logo"></a>
