--- a/about_myself.html
+++ b/about_myself.html
@@ -10,7 +10,7 @@
     <script src="js/script.js"></script> 
     
 </head>
-<body>
+<body class = "body_light" id = "body_id" onload = "isDarkTheme_main();">
     <header>
             <a href="about_myself.html">
                 <img src="images/kish.png" alt="Горшок Жив" width="100" class = "logo" id="logo"></a>
@@ -24,7 +24,7 @@
                         <li> <b><a href="contacts.html">Контакты</a></b></li>
                     </ul>  
                 </nav>  
-                <button class ="button" onclick="tst()"><img src="images/moon.png" alt="Горшок Жив" width="50" class = "logo" id="buttons"></button>
+                <button class ="button" onclick="add_theme_1()"><img src="images/moon.png" alt="Горшок Жив" width="50" class = "logo" id="buttons"></button>
             </header>
 
     <article class = "article_about">
