--- a/portfolio.html
+++ b/portfolio.html
@@ -9,7 +9,7 @@
     <script src="js/script.js"></script> 
     
 </head>
-<body>
+<body class = "body_light" id = "body_id" onload = "isDarkTheme_portfolio();">
     <header>
             <a href="about_myself.html">
                 <img src="images/kish.png" alt="Горшок Жив" width="100" class = "logo" id="logo"></a>
