--- a/competence.html
+++ b/competence.html
@@ -9,21 +9,22 @@
     <script src="js/script.js"></script> 
 
 </head>
-<body class = "body_light" id = "body_id" onload = "isDarkTheme_kompetetions(); isButtonShow();">    <header>
-            <a href="about_myself.html">
-                <img src="images/kish.png" alt="Горшок Жив" width="100" class = "logo" id="logo"></a>
+<body class = "body_light" id = "body_id" onload = "isDarkTheme_kompetetions(); isButtonShow();">    
+    <header>
+        <a href="about_myself.html">
+            <img src="images/kish.png" alt="Горшок Жив" width="100" class = "logo" id="logo"></a>
 
-                <nav>
-                    <ul class = "nav_links">
-                        <li><b><a href="about_myself.html">О себе</a></b></li>
-                        <li> <b><a href="competence.html">Компетенции</a></b></li>
-                        <li> <b><a href="resume.html">Резюме</a></b></li>
-                        <li> <b><a href="portfolio.html">Портфолио</a></b></li>
-                        <li> <b><a href="contacts.html">Контакты</a></b></li>
-                    </ul>  
-                </nav>  
-                <button class ="button" onclick="add_theme_2()"><img src="images/moon.png" alt="Горшок Жив" width="50" class = "logo" id="buttons"></button>
-            </header>
+            <nav>
+                <ul class = "nav_links">
+                    <li><b><a href="about_myself.html">О себе</a></b></li>
+                    <li> <b><a href="competence.html">Компетенции</a></b></li>
+                    <li> <b><a href="resume.html">Резюме</a></b></li>
+                    <li> <b><a href="portfolio.html">Портфолио</a></b></li>
+                    <li> <b><a href="contacts.html">Контакты</a></b></li>
+                </ul>  
+            </nav>  
+        <button class ="button" onclick="add_theme_1()"><img src="images/moon.png" alt="Горшок Жив" width="50" class = "logo" id="buttons"></button>
+    </header>
 
     <article class="kompetetions_article">
         <div class="main">
