--- a/competence.html
+++ b/competence.html
@@ -28,6 +28,7 @@
 
     <article class="kompetetions_article">
         <div class="main">
+            <div class= "blockss">
             <p href="#"  button id="b1_1" class="b1_1" onclick="block1_show()" style="display:none;">Показать блок 1</button>
             <section class="main-section background-color-white" id = "block1">
                 <div class="wrapper">
@@ -44,8 +45,10 @@
                         </div>
                     </div>
                 </div>
+                </div>
             </section>        
 
+            <div class= "blockss">
             <p href="#" class="b1_1" button id="b1_2" onclick="block2_show()" style="display:none;">Показать блок 2</button>
             <section class=" main-section background-color-black" id = "block2">
                 <div class="wrapper">
@@ -71,9 +74,11 @@
                             </div>
                         </div>
                     </div>
-                </div>            
+                </div>
+            </div>            
             </section>
 
+            <div class= "blockss">
             <p href="#" class="b1_1" button id="b1_3" onclick="block3_show()" style="display:none;">Показать блок 3</button>
             <section class=" main-section background-color-orange" id = "block3">
                 <div class="wrapper">
@@ -100,8 +105,10 @@
                         </div>
                     </div>
                 </div>
+            </div>
             </section>
 
+            <div class= "blockss">
             <p href="#" class="b1_1" button id="b1_4" onclick="block4_show()" style="display:none;">Показать блок 4</button>
             <section class=" main-section background-color-black" id="block4">
                 <div class="wrapper">
@@ -121,6 +128,7 @@
                         </div>
                     </div>
                 </div>
+            </div>
             </section>        
         </div>
     </article>
