--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
               <li>Member of the university KVN team</li>
               <li>Communicative</li>
               <li>I play volleyball</li>
-              <li>The ability yo study and learn</li>
+              <li>The ability to study and learn</li>
               <li>The ability to properly allocate time</li>
               <li>Stress Resistance</li>
               <li>Can play the guitar</li>
